--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <h2>Agustina Morante Caputo </h2>
 <h3>Guadalupe Valdez</h3>
 <p>Valdez Guadalupe 12/06/2025 13:23</p>
+<p>Morante Caputo Agustina 12/06/2025 13:30</p>
 </body>
 </html>
